--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "homepage": ".",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.6.2",
+    "@pinecone-database/pinecone": "^6.1.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.12.1",
+    "axios": "^1.10.0",
     "chrome": "^0.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "framer-motion": "^10.16.4",
     "fs": "^0.0.1-security",
     "langchain": "^0.0.143",
@@ -20,6 +26,8 @@
     "react": "^18.2.0",
     "react-chat-elements": "^12.0.10",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "rsuite": "^5.41.0",
