--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "langchain": "^0.0.143",
     "marked": "^9.1.2",
     "mui": "^0.0.1",
+    "openai": "^5.8.1",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-chat-elements": "^12.0.10",
